--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Atividade6"
         tools:targetApi="31">
         <activity
+            android:name=".update_book"
+            android:exported="false" />
+        <activity
             android:name=".book_register"
             android:exported="false" />
         <activity
